--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Capture Video</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova-x.x.x.js"></script>
+    <!--<script type="text/javascript" charset="utf-8" src="cordova-x.x.x.js"></script>
     <script type="text/javascript" charset="utf-8" src="json2.js"></script>
+    -->
     <script type="text/javascript" charset="utf-8">
-
+    
     // Called when capture operation is finished
     //
     function captureSuccess(mediaFiles) {
